--- a/firstPage.html
+++ b/firstPage.html
@@ -8,6 +8,28 @@
 <body>
 <!-- content goes in the body -->
 <h1>This is my first tag!!</h1>
+<h2>This is another heading</h2>
+<h6>This is another heading!!!!</h6>
+
+<p>Lorem Ipsum is <strong>simplydummy text</strong> of the printing and typesetting industry. <em>Lorem Ipsum</em> has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a gallery of type and scrambled it to make a type specimen book. It has survived not only five centruries, but also the leap into electronic typesettign, remianing essentially unchanged. Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+<p>jvnxxslkdjflskdflsfbslkdfhlkhsflbsfsdlfdsdofjsldihfl,dbjsblvshsfhvsfhlsdhlsufghsdlf</p>
+<ol>
+	<li>Red</li>
+	<li>Orange</li>
+	<li>Yellow
+		<ul>
+			<li>Sunflower</li>
+			<li>Banana</li>
+		</ul>
+	</li>
+</ol>
+
+<ul>
+	<li>Red</li>
+	<li>Orange</li>
+	<li>Yellow</li>
+</ul>
 
 </body>
 </html>
